<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditText_FloatingLabels_TextInput">

    <TextView
        android:id="@+id/editTextFloatingLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_text_icin_floatinglabels_text_imput"
        app:layout_constraintLeft_toLeftOf=" parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textImput1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextFloatingLabels"
        android:layout_marginTop="50dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/kullanici_adi_giriniz" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textImput2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textImput1"
        app:layout_constraintStart_toStartOf="@id/textImput1"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sifre_giriniz"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonVeri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yap"
        app:layout_constraintStart_toStartOf="@id/textImput2"
        app:layout_constraintEnd_toEndOf="@id/textImput2"
        app:layout_constraintTop_toBottomOf="@id/textImput2"
        android:layout_marginTop="100dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        />

</androidx.constraintlayout.widget.ConstraintLayout>