<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:contentPadding="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imagedjango"
                android:layout_width="200dp"
                android:layout_height="300dp"
                app:srcCompat="@drawable/django"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/resim" />

            <TextView
                android:id="@+id/textdjango"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/django"
                app:layout_constraintStart_toStartOf="@id/imagedjango"
                app:layout_constraintEnd_toEndOf="@id/imagedjango"
                app:layout_constraintTop_toBottomOf="@id/imagedjango"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/textdjango2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_14_99tl"
                app:layout_constraintTop_toBottomOf="@id/textdjango"
                app:layout_constraintStart_toStartOf="@id/textdjango"
                app:layout_constraintEnd_toEndOf="@id/textdjango"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/buttonSepeteEkle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sepete_ekle"
                android:textSize="13sp"
                android:backgroundTint="@android:color/holo_red_dark"
                app:layout_constraintTop_toBottomOf="@id/textdjango2"
                app:layout_constraintStart_toStartOf="@id/textdjango2"
                app:layout_constraintEnd_toEndOf="@id/textdjango2"
                android:layout_marginTop="10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>